--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
   "jest": {
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
-      "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
-    }
+      "\\.(css|less|scss)$": "<rootDir>/__mocks__/styleMock.js"
+    },
+    "setupFiles": [
+      "jest-localstorage-mock"
+    ]
   },
   "author": "Steve Kinney",
   "license": "MIT",
@@ -44,6 +47,7 @@
     "eslint-plugin-react": "^5.1.1",
     "file-loader": "^0.11.2",
     "jest": "^20.0.4",
+    "jest-localstorage-mock": "^2.1.0",
     "mocha": "^2.4.5",
     "mocha-loader": "^0.7.1",
     "node-libs-browser": "^1.0.0",
@@ -54,10 +58,10 @@
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.12.14",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.14.1",
+    "@etcetera8/complete-me": "git+https://github.com/etcetera8/complete-me.git"
   },
   "dependencies": {
-    "@etcetera8/complete-me": "git+https://github.com/etcetera8/complete-me.git",
     "jquery": "^3.2.1",
     "normalize.css": "^7.0.0",
     "weather-underground-icons": "^1.0.0"
