--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "webpack-dev-server",
     "build": "webpack.js",
-    "test": "jest"
+    "test": "jest",
+    "eslint": "./node_modules/eslint/bin/eslint.js ./lib/*.js"
   },
   "repository": {
     "type": "git",
@@ -28,6 +29,7 @@
   },
   "homepage": "https://github.com/turingschool-examples/react-starter-kit",
   "devDependencies": {
+    "@etcetera8/complete-me": "git+https://github.com/etcetera8/complete-me.git",
     "babel": "^6.5.2",
     "babel-core": "^6.24.1",
     "babel-eslint": "^6.0.4",
@@ -40,7 +42,7 @@
     "chai": "^3.5.0",
     "css-loader": "^0.23.1",
     "enzyme": "^2.8.2",
-    "eslint": "^2.6.0",
+    "eslint": "^2.13.1",
     "eslint-config-airbnb": "^9.0.1",
     "eslint-plugin-import": "^1.8.0",
     "eslint-plugin-jsx-a11y": "^1.2.2",
@@ -58,8 +60,7 @@
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.12.14",
-    "webpack-dev-server": "^1.14.1",
-    "@etcetera8/complete-me": "git+https://github.com/etcetera8/complete-me.git"
+    "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
     "jquery": "^3.2.1",
